// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponseRouterForm initializes 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  gutter={
    <TimeoutControl
      onChanged={[Function]}
    />
  }
  headerClass="wait_for_response"
  title="Wait for Response"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "switch",
        ],
        "description": "Wait for the contact to respond",
        "form": undefined,
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
          "cases",
        ],
        "name": "Wait for Response",
        "type": "wait_for_response",
      }
    }
    onChange={[MockFunction]}
  />
  <div>
    If the message response...
  </div>
  <CaseList
    cases={
      Array [
        Object {
          "exitName": null,
          "kase": Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": null,
            "type": "has_any_word",
            "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          },
          "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        },
      ]
    }
    data-spec="cases"
    onCasesUpdated={[Function]}
  />
  <OptionalTextInput
    helpText="By naming the result, you can reference it later using @run.results.whatever_the_name_is"
    name="Result Name"
    onChange={[Function]}
    toggleText="Save as.."
    value={
      Object {
        "value": "Color",
      }
    }
  />
</Dialog>
`;

exports[`ResponseRouterForm should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  gutter={
    <TimeoutControl
      onChanged={[Function]}
      timeout={0}
    />
  }
  headerClass="wait_for_response"
  title="Wait for Response"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "switch",
        ],
        "description": "Wait for the contact to respond",
        "form": undefined,
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
          "cases",
        ],
        "name": "Wait for Response",
        "type": "wait_for_response",
      }
    }
    onChange={[MockFunction]}
  />
  <div>
    If the message response...
  </div>
  <CaseList
    cases={Array []}
    data-spec="cases"
    onCasesUpdated={[Function]}
  />
  <OptionalTextInput
    helpText="By naming the result, you can reference it later using @run.results.whatever_the_name_is"
    name="Result Name"
    onChange={[Function]}
    toggleText="Save as.."
    value={
      Object {
        "value": "Result",
      }
    }
  />
</Dialog>
`;

exports[`ResponseRouterForm updates should save changes 1`] = `
Object {
  "cases": Array [
    Object {
      "exitName": "Red",
      "kase": Object {
        "arguments": Array [
          "red",
        ],
        "type": "has_any_word",
      },
    },
    Object {
      "exitName": "Red",
      "kase": Object {
        "arguments": Array [
          "maroon",
        ],
        "type": "has_any_word",
      },
    },
    Object {
      "exitName": "Green",
      "kase": Object {
        "arguments": Array [
          "green",
        ],
        "type": "has_any_word",
      },
    },
  ],
  "resultName": Object {
    "value": "Favorite Color",
  },
  "timeout": 180,
  "valid": true,
}
`;

exports[`ResponseRouterForm updates should save changes 2`] = `
Object {
  "inboundConnections": Object {},
  "node": Object {
    "actions": Array [],
    "exits": Array [
      Object {
        "destination_node_uuid": null,
        "name": "Red",
        "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
      },
      Object {
        "destination_node_uuid": null,
        "name": "Green",
        "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
      },
      Object {
        "destination_node_uuid": undefined,
        "name": "No Response",
        "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
      },
      Object {
        "destination_node_uuid": null,
        "name": "Other",
        "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
      },
    ],
    "router": Object {
      "cases": Array [
        Object {
          "arguments": Array [
            "red",
          ],
          "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
          "type": "has_any_word",
        },
        Object {
          "arguments": Array [
            "maroon",
          ],
          "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
          "type": "has_any_word",
        },
        Object {
          "arguments": Array [
            "green",
          ],
          "exit_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
          "type": "has_any_word",
        },
        Object {
          "arguments": Array [
            "@run",
          ],
          "exit_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          "type": "has_wait_timed_out",
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
      "default_exit_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
      "operand": "@run.input",
      "result_name": "Favorite Color",
      "type": "switch",
    },
    "uuid": "node-0",
    "wait": Object {
      "timeout": 180,
      "type": "msg",
    },
  },
  "ui": Object {
    "position": null,
    "type": "wait_for_response",
  },
}
`;
